--- a/package.json
+++ b/package.json
@@ -30,34 +30,34 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "css-url-relative-plugin": "^1.0.0",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jquery": "^1.5.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.2",
     "husky": "^1.3.1",
     "image-webpack-loader": "^4.6.0",
     "install": "^0.12.2",
-    "lint-staged": "^8.1.3",
+    "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "preload-webpack-plugin": "^2.3.0",
-    "prettier": "^1.16.4",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
+    "prettier": "^1.16.1",
     "prettier-package-json": "^2.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.2",
+    "terser-webpack-plugin": "^1.2.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
   "husky": {
