--- a/.github/workflows/auto-merge-dependabot-pr.yml
+++ b/.github/workflows/auto-merge-dependabot-pr.yml
@@ -1,14 +1,13 @@
-name: Auto approve
+name: Auto merge dependabot pr 
 
 on:
   pull_request
-
 jobs:
   auto-approve:
+    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/auto-approve-action@v2.0.0
-      if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
       with:
         github-token: "${{ secrets.GITHUB_TOKEN }}"
     - name: Merge me!
